zdecom/argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: horel-ca-issuer
    cert-manager.io/common-name: argocd.horel.io
    traefik.ingress.kubernetes.io/router.middlewares: argocd-http-to-https@kubernetescrd
spec:
  rules:
    - host: argocd.horel.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 8080
  tls:
    - secretName: argocd-server-tls
      hosts:
        - argocd.horel.io
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: http-to-https
  namespace: argocd
spec:
  redirectScheme:
    scheme: https
    permanent: true
